# RSSBox

./: .gitignore  DIGEST_GUIDE.md  Dockerfile  FRONTEND_README.md  README.md  README_EN.md  pyproject.toml  test_digest_functionality.py  test_opml_fix.py
.cursor/rules/: project.mdc
.github/ISSUE_TEMPLATE/: Bug_Report.yml
.github/workflows/: dev-docker-image.yml  django-test.yml  latest-docker-image.yml
config/: rt_cron  settings.py  urls.py
core/: actions.py  admin.py  api_urls.py  api_views.py  cache.py  context_processors.py  custom_admin_site.py  digest_views.py  forms.py  frontend_urls.py  frontend_views.py  models.py  tasks.py  tests.py  urls.py  views.py
core/admin/: __init__.py  admin_site.py  agent_admin.py  digest_admin.py  feed_admin.py  filter_admin.py  tag_admin.py
core/forms/: __init__.py  digest_form.py  feed_form.py  filter_form.py  tag_form.py
core/migrations/: 0001_initial.py  0002_alter_o_feed_name.py  0003_alter_o_feed_options_alter_t_feed_options_and_more.py  0004_o_feed_max_posts.py  0005_alter_o_feed_max_posts_alter_t_feed_sid.py  0006_alter_o_feed_update_frequency.py  0007_remove_o_feed_modified_o_feed_last_pull_and_more.py  0008_alter_t_feed_options_alter_t_feed_sid.py  (+39 more)
deploy/: docker-compose.yml
dev-diaries/: versun-dev-diary.md
docs/: mkdocs.yml  requirements.txt
scripts/: dev_server.py  entrypoint.sh  init.py  prod_server.py
translator/: admin.py  models.py
utils/: backup_db.py  clustering_service.py  digest_generator.py  digest_tasks.py  feed_action.py  modelAdmin_utils.py  task_manager.py  text_handler.py
(+158 files in other folders)
