[project]
name = "rss-translator"
version = "2025.8.4"
description = "A Django-based RSS translation service. Compatible with uv/uvicorn."
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "redis>=6.2.0",
    "django-encrypted-model-fields>=0.6.5",
    "django-tagulous>=2.1.1",
    "bs4>=0.0.2",
    "deepl>=1.22.0",
    "openai>=1.82.0",
    "feed2json>=2024.4.29",
    "feedgen>=1.0.0",
    "feedparser>=6.0.11",
    "gevent>=25.5.1",
    "html2text>=2025.4.15",
    "lxml>=5.4.0",
    "lxml-html-clean>=0.4.2",
    "mistune>=3.1.3",
    "newspaper4k>=0.9.3.1",
    "python-dateutil>=2.9.0.post0",
    "tiktoken>=0.9.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
    "django-debug-toolbar>=5.2.0",
    "bx_django_utils>=89",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "django-autoslug>=1.9.9",
]

[tool.uv]
package = true

[tool.setuptools]
packages = [ "config", "core", "locale", "scripts", "templates", "utils" ] 

[project.scripts]
server = "scripts.prod_server:main"
dev = "scripts.dev_server:main"
init = "scripts.init:init_server"
